{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 40,
  "lineage": "73f1b359-3fa7-a05b-a0a2-e1bfc416c420",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "batch_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664418983811:internet-gateway/igw-01a2993b783438e97",
            "id": "igw-01a2993b783438e97",
            "owner_id": "664418983811",
            "tags": {
              "Name": "batch-igw-mwjnshy2"
            },
            "tags_all": {
              "Name": "batch-igw-mwjnshy2"
            },
            "vpc_id": "vpc-0c2cb380e3a54ed26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.batch_vpc",
            "random_string.resource_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "batch_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664418983811:route-table/rtb-0f054fe82d68bda9e",
            "id": "rtb-0f054fe82d68bda9e",
            "owner_id": "664418983811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a2993b783438e97",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "batch-route-table-mwjnshy2"
            },
            "tags_all": {
              "Name": "batch-route-table-mwjnshy2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2cb380e3a54ed26"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.batch_igw",
            "aws_vpc.batch_vpc",
            "random_string.resource_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "batch_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c018cf66d3bf4ede",
            "route_table_id": "rtb-0f054fe82d68bda9e",
            "subnet_id": "subnet-02d79eaa9223a3209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.batch_igw",
            "aws_route_table.batch_route_table",
            "aws_subnet.batch_subnet",
            "aws_vpc.batch_vpc",
            "data.aws_availability_zones.available",
            "random_string.resource_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "batch_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664418983811:security-group/sg-02d52dfe1be4d7f8b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d52dfe1be4d7f8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic on port 8080 for Flask app",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "batch-sg-mwjnshy2-20250617133819390400000005",
            "name_prefix": "batch-sg-mwjnshy2-",
            "owner_id": "664418983811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "batch-security-group-mwjnshy2"
            },
            "tags_all": {
              "Name": "batch-security-group-mwjnshy2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2cb380e3a54ed26"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.batch_vpc",
            "random_string.resource_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "flask_app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound traffic on port 8080 for Flask app",
            "from_port": 8080,
            "id": "sgrule-2869509781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d52dfe1be4d7f8b",
            "security_group_rule_id": "sgr-065465bec7b360b70",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.batch_security_group",
            "aws_vpc.batch_vpc",
            "random_string.resource_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "batch_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664418983811:subnet/subnet-02d79eaa9223a3209",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d79eaa9223a3209",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "664418983811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "batch-subnet-mwjnshy2"
            },
            "tags_all": {
              "Name": "batch-subnet-mwjnshy2"
            },
            "vpc_id": "vpc-0c2cb380e3a54ed26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.batch_vpc",
            "data.aws_availability_zones.available",
            "random_string.resource_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "batch_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664418983811:vpc/vpc-0c2cb380e3a54ed26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05aa67d9d112ba863",
            "default_route_table_id": "rtb-00af24a8c18cae5a8",
            "default_security_group_id": "sg-058ed2c919dc41e45",
            "dhcp_options_id": "dopt-0c6b0403a09a8c7a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2cb380e3a54ed26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00af24a8c18cae5a8",
            "owner_id": "664418983811",
            "tags": {
              "Name": "batch-vpc-mwjnshy2"
            },
            "tags_all": {
              "Name": "batch-vpc-mwjnshy2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_string.resource_suffix"
          ]
        }
      ]
    }
  ]
}